--- a/bias_variance_tradeoff.ipynb
+++ b/bias_variance_tradeoff.ipynb
@@ -14,6 +14,17 @@
      ]
     }
    ],
+   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bhattbhavesh91/bias_variance_example/edit/master/bias_variance_tradeoff.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
